[BUG #6819] Make the iframe visible to prevent some tests from failing

--- a/component/testrunner/source/resource/testrunner/view/mobile/css/styles.css
+++ b/component/testrunner/source/resource/testrunner/view/mobile/css/styles.css
@@ -19,11 +19,8 @@
 }
 
 #autframe {
-  position: absolute;
-  left: -10px;
-  top: -10px;
-  width: 0;
-  height: 0;
+  width: 1px;
+  height: 1px;
 }
 
 .runbutton {
